<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <fragment
            android:id="@+id/map"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context="pl.jawegiel.mvpappwithlocation.MainActivity" />

        <Button
            android:id="@+id/buttonGetMyPosition"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/semiTransparentGreen"
            android:layout_margin="@dimen/margin"
            android:padding="@dimen/padding"
            android:textSize="@dimen/text_size"
            android:text="@string/my_location" />

        <Button
            android:id="@+id/buttonGetReceiverPosition"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/buttonGetMyPosition"
            android:layout_toEndOf="@id/buttonGetMyPosition"
            android:background="@color/semiTransparentGreen"
            android:layout_margin="@dimen/margin"
            android:padding="@dimen/padding"
            android:textSize="@dimen/text_size"
            android:text="@string/get_position" />

        <Button
            android:id="@+id/buttonSetLine"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_below="@id/buttonGetMyPosition"
            android:enabled="false"
            android:background="@color/semiTransparentGreen"
            android:layout_margin="@dimen/margin"
            android:padding="@dimen/padding"
            android:textSize="@dimen/text_size"
            android:text="@string/set_line" />

        <Button
            android:id="@+id/buttonDistance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/buttonGetMyPosition"
            android:layout_toRightOf="@id/buttonSetLine"
            android:layout_toEndOf="@id/buttonSetLine"
            android:background="@color/semiTransparentGreen"
            android:layout_margin="@dimen/margin"
            android:padding="@dimen/padding"
            android:textSize="@dimen/text_size"
            android:text="@string/distance" />

        <Button
            android:id="@+id/buttonStartLoggingData"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="@color/semiTransparentGreen"
            android:layout_margin="@dimen/margin"
            android:padding="@dimen/padding"
            android:textSize="@dimen/text_size"
            android:enabled="false"
            android:text="@string/start_logging_data" />

        <Button
            android:id="@+id/buttonStopLoggingData"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_toRightOf="@id/buttonStartLoggingData"
            android:layout_toEndOf="@id/buttonStartLoggingData"
            android:background="@color/semiTransparentGreen"
            android:layout_margin="@dimen/margin"
            android:paddingTop="@dimen/padding"
            android:textSize="@dimen/text_size"
            android:text="@string/stop_logging_data" />

    </RelativeLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nv"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@color/semiTransparentWhite"
        app:menu="@menu/navigation_menu" />


</androidx.drawerlayout.widget.DrawerLayout>